Stop dependency on `jniast_libraries` forcing continual rebuilds.

--- a/jniast/src/jni/Makefile.am
+++ b/jniast/src/jni/Makefile.am
@@ -1,25 +1,27 @@
 ## Process this file with automake to produce Makefile.in
 
-## List libraries which are to be built, these are not installed by this 
-## package, convert does that.
+## List libraries which are to be built.
 lib_LTLIBRARIES = libjniast.la
 
 ## Declare the sources for the library.
-libjniast_la_SOURCES = \
- $(PRIVATE_INCLUDES) \
- $(C_ROUTINES)
+libjniast_la_SOURCES = $(PRIVATE_INCLUDES) $(C_ROUTINES)
 
-## If using Fortran version of SLALIB we need @FCLIBS@
-
+## If using Fortran version of SLALIB we need @FCLIBS@. LIBADD is defined by
+## the caller (build.xml file). The jniast_libraries script should return the
+## full names of any static libraries that are to be included in the final
+## shareable library. This forces libtool to include them (and issue some
+## warnings that this isn't a good idea).
 libjniast_la_LIBADD = $(LIBADD) `$(srcdir)/jniast_libraries` @FCLIBS@
 
-`$(srcdir)/jniast_libraries`:
-	:
+## Stop `$(srcdir)/jniast_libraries` being used as dependency.
+libjniast_la_DEPENDENCIES =
 
+## Extra includes defined by the caller (build.xml file).
 INCLUDES = $(INCADD)
 
-## We want to dlopen this library, how to get all libraries resolved into 
-## this one?
+## We want to dlopen this library, so use -module. It's difficult to deal 
+## with versioning from Java, so don't have any -avoid-version (gets the 
+## file libjniast.so under UNIX). 
 libjniast_la_LDFLAGS = -module -avoid-version
 
 PRIVATE_INCLUDES = err_jniast.h  jniast.h
@@ -58,11 +60,10 @@ C_ROUTINES = \
    ZoomMap.c \
    GrfEscape.c
 
-## In order to get the correct name for the dlopened library we need to let
-## libtool do it's work and then query the convert_idl.la file for the dlname
-## variable. XXX need to get this back out to Java?
-
-getdlname = grep 'dlname=' convert_idl.la | sed -e 's:dlname=::' -e s:\'::g
-
-edit = sed \
-        -e "s,@DLNAME\@,$$DLNAME,g"
+## If we switched to versioning the shareable library then the actual name 
+## could be determined by the following code. Would need a method to get this
+## out to Java.
+##getdlname = grep 'dlname=' libjniast.la | sed -e 's:dlname=::' -e s:\'::g
+##
+##edit = sed \
+##        -e "s,@DLNAME\@,$$DLNAME,g"
