--- a/jniast/build.xml
+++ b/jniast/build.xml
@@ -675,54 +675,10 @@
 
     <echo message="java.home=${java.home}"/>
 
-    <exec dir="${build.jni}" executable="${build.jni}/mk" os="Linux"
-          failonerror="yes">
-      <env key="SYSTEM" value="ix86_Linux"/>
-      <env key="JAVA_SYSTEM" value="linux"/>
+    <exec dir="${build.jni}" executable="${build.jni}/mk" failonerror="yes">
       <env key="STARLINK" value="${stardev}"/>
       <env key="LIBADD" value="-L${stardev.add}/lib"/>
       <env key="INCADD" value="-I${stardev.add}/include"/>
-      <env key="JDK" value="${jdk}"/>
-      <env key="JAVA_SHAREABLES" value="${java.shareables}"/>
-      <env key="TARGET_LIB" value="${build.lib.arch}"/>
-      <arg line="${mk.action}"/>
-    </exec>
-
-    <exec dir="${build.jni}" executable="${build.jni}/mk" os="SunOS"
-          failonerror="yes">
-      <env key="SYSTEM" value="sun4_Solaris"/>
-      <env key="JAVA_SYSTEM" value="solaris"/>
-      <env key="STARLINK" value="${stardev}"/>
-      <env key="ADDLIBS" value="-L${stardev.add}/lib"/>
-      <env key="ADDINCS" value="-I${stardev.add}/include"/>
-      <env key="JDK" value="${jdk}"/>
-      <env key="JAVA_SHAREABLES" value="${java.shareables}"/>
-      <env key="TARGET_LIB" value="${build.lib.arch}"/>
-      <arg line="${mk.action}"/>
-    </exec>
-
-    <exec dir="${build.jni}" executable="${build.jni}/mk" os="Mac OS X"
-          failonerror="yes">
-      <env key="SYSTEM" value="ppc_MacOSX"/>
-      <env key="JAVA_SYSTEM" value="ppc"/>
-      <env key="STARLINK" value="${stardev}"/>
-      <env key="ADDLIBS" value="-L${stardev.add}/lib"/>
-      <env key="ADDINCS" value="-I${stardev.add}/include"/>
-      <env key="JDK" value="${jdk}"/>
-      <env key="JAVA_SHAREABLES" value="${java.shareables}"/>
-      <env key="TARGET_LIB" value="${build.lib.arch}"/>
-      <arg line="${mk.action}"/>
-    </exec>
-
-    <exec dir="${build.jni}" executable="${build.jni}/mk" os="OSF1"
-          failonerror="yes">
-      <env key="SYSTEM" value="alpha_OSF1"/>
-      <env key="JAVA_SYSTEM" value="alpha"/>
-      <env key="STARLINK" value="${stardev}"/>
-      <env key="ADDLIBS" value="-L${stardev.add}/lib"/>
-      <env key="ADDINCS" value="-I${stardev.add}/include"/>
-      <env key="JDK" value="${jdk}"/>
-      <env key="JAVA_SHAREABLES" value="${java.shareables}"/>
       <env key="TARGET_LIB" value="${build.lib.arch}"/>
       <arg line="${mk.action}"/>
     </exec>
