Tablecopy usage message is now constructed automatically for insertion into SUN/253 at document build time.  So we don't need to worry about keeping the description up to date in the XML.

--- a/topcat/build.xml
+++ b/topcat/build.xml
@@ -1085,6 +1085,19 @@
              classpathref="classpath"
              source="${source.version}"/>
 
+    <!-- Construct tablecopy usage message in XML. -->
+    <property name="tablecopy.usage" value="${build.docs}/tablecopy.usage"/>
+    <echo message="&lt;![CDATA[" file="${tablecopy.usage}" append="no"/>
+    <java classname="uk.ac.starlink.table.TableCopy"
+          failonerror="yes"
+          fork="yes"
+          output="${tablecopy.usage}"
+          append="yes"
+          classpathref="classpath">
+      <arg value="-help"/>
+    </java>
+    <echo message="]]&gt;" file="${tablecopy.usage}" append="yes"/>
+
     <!-- Transform the user document XML to a single HTML document. -->
     <mkdir dir="${build.docs}/${user.doc}"/>
     <xslt in="${build.docs}/${user.doc}.xml" 
