--- a/topcat/build.xml
+++ b/topcat/build.xml
@@ -1120,6 +1120,7 @@
       <classpath>
         <fileset dir="${src.docs}" includes="*.jar"/>
       </classpath>
+      <arg value="-q"/>
       <arg value="-fo"/> <arg value="${build.docs}/${user.doc}.fo"/>
       <arg value="-pdf"/> <arg value="${build.docs}/${user.doc}.pdf"/>
     </java>
