Updated build.xml to support new packages

--- a/build.xml
+++ b/build.xml
@@ -188,6 +188,12 @@
     <echo message="Executing JPCS target: ${what}"/>
     <ant dir="./jpcs" target="${what}"/>
 
+    <echo message="Executing StarTask target: ${what}"/>
+    <ant dir="./startask" target="${what}"/>
+ 
+    <echo message="Executing JNIKAPPA target: ${what}"/>
+    <ant dir="./jnikappa" target="${what}"/>
+       
     <echo message="Executing SOG target: ${what}"/>
     <ant dir="./sog" target="${what}"/>
 
