Commented out build dpendancy on xercesImpl.jar. It's in the .properties file, so should be in the search path at run time as it get installed from AXIS into the correct place

--- a/jpcs/build.xml
+++ b/jpcs/build.xml
@@ -279,10 +279,10 @@
           unless="runonly.install">
 
     <!-- Need SAX -->
-    <available property="sax.present"
+  <!--  <available property="sax.present"
                classpathref="classpath"
                classname="org.apache.xerces/parsers/SAXParser"/>
-    <fail message="No SAX available" unless="sax.present"/>
+    <fail message="No SAX available" unless="sax.present"/> -->
 
     <!-- Need JUnit for testcases, not essential -->
     <condition property="testframework.present">
