--- a/build.xml
+++ b/build.xml
@@ -191,8 +191,8 @@
     <echo message="Executing StarTask target: ${what}"/>
     <ant dir="./startask" target="${what}"/>
  
-    <echo message="Executing JNIKAPPA target: ${what}"/>
-    <ant dir="./jnikappa" target="${what}"/>
+ <!--   <echo message="Executing JNIKAPPA target: ${what}"/> -->
+ <!--   <ant dir="./jnikappa" target="${what}"/> -->
        
     <echo message="Executing SOG target: ${what}"/>
     <ant dir="./sog" target="${what}"/>
