Some changes in the export-full target for; it now zips up the native files into the main archives rather than putting them in separate platform-specific archives.  This makes it easier to use. There are still one some anomalies, but it's better than it was.

--- a/build.xml
+++ b/build.xml
@@ -583,8 +583,7 @@
                                             group="${tar.group}"/>
       <tarfileset dir="${star.install}/lib" prefix="${archive.top}lib"
                                             username="${tar.user}"
-                                            group="${tar.group}"
-                                            excludes="${os.arch}/**"/>
+                                            group="${tar.group}"/>
     </tar>
 
     <zip destfile="${star.archive.dir}/${archive.name}.zip">
@@ -592,17 +591,8 @@
                                             prefix="${archive.top}"/>
       <zipfileset dir="${star.install}/bin" prefix="${archive.top}bin"/>
       <zipfileset dir="${star.install}/etc" prefix="${archive.top}etc"/>
-      <zipfileset dir="${star.install}/lib" prefix="${archive.top}lib"
-                  excludes="${os.arch}/**"/>
+      <zipfileset dir="${star.install}/lib" prefix="${archive.top}lib"/>
     </zip>
-
-    <tar destfile="${star.archive.dir}/${archive.jni.name}.tar.gz"
-         compression="gzip" longfile="gnu">
-      <tarfileset dir="${star.install}/lib/${os.arch}"
-                  username="${tar.user}"
-                  group="${tar.group}"
-                  prefix="${archive.top}lib/${os.arch}"/>
-    </tar>
 
   </target>
 
