updated for 2.2 release

--- a/splat/.properties
+++ b/splat/.properties
@@ -1,4 +1,4 @@
-javadoc.notrequired=true
+#javadoc.notrequired=true
 jar.class.path=bsh-1.2b7.jar splat_colt.jar jdom.jar \
 splat_help.jar jsci_core.jar jsci_wavelet.jar jargs.jar \
 ../astgui/astgui.jar ../ndx/ndx.jar ../hdx/hdx.jar ../array/array.jar \
