--- a/diva/build.xml
+++ b/diva/build.xml
@@ -79,7 +79,7 @@
   <!-- Define the package name and current versions -->
   <property name="Name" value="DIVA"/>
   <property name="name" value="diva"/>
-  <property name="version" value="1.0"/>
+  <property name="version" value="1.0-1"/>
 
   <!-- The Java package name -->
   <property name="package.name" value="diva"/>
