--- a/splat/.properties
+++ b/splat/.properties
@@ -1,7 +1,8 @@
-#javadoc.notrequired=true
+javadoc.notrequired=true
 jar.class.path=bsh-1.2b7.jar splat_colt.jar jdom.jar \
 splat_help.jar jsci_core.jar jsci_wavelet.jar jargs.jar \
 ../astgui/astgui.jar ../ndx/ndx.jar ../hdx/hdx.jar ../array/array.jar \
 ../tamfits/tamfits.jar ../jniast/jniast.jar ../soapserver/soapserver.jar \
 ../fits/fits.jar ../hds/hds.jar ../treeview/treeview.jar ../pal/pal.jar \
-../diva/diva.jar ../help/help.jar ../table/table.jar ../votable/votable.jar
+../diva/diva.jar ../help/help.jar ../table/table.jar ../votable/votable.jar \
+../jsky/jsky.jar
