This commit was generated by cvs2svn to compensate for changes in r2870, which included commits to RCS files with non-trunk default branches.

--- a/axis/webapps/axis/WEB-INF/web.xml
+++ b/axis/webapps/axis/WEB-INF/web.xml
@@ -23,6 +23,19 @@
     <load-on-startup>100</load-on-startup>
   </servlet>
 
+  <servlet>
+    <servlet-name>SOAPMonitorService</servlet-name>
+    <display-name>SOAPMonitorService</display-name>
+    <servlet-class>
+        org.apache.axis.monitor.SOAPMonitorService
+    </servlet-class>
+    <init-param>
+      <param-name>SOAPMonitorPort</param-name>
+      <param-value>5001</param-value>
+    </init-param>
+    <load-on-startup>100</load-on-startup>
+  </servlet>
+
   <servlet-mapping>
     <servlet-name>AxisServlet</servlet-name>
     <url-pattern>/servlet/AxisServlet</url-pattern>
@@ -38,6 +51,11 @@
     <url-pattern>/services/*</url-pattern>
   </servlet-mapping>
 
+  <servlet-mapping>
+    <servlet-name>SOAPMonitorService</servlet-name>
+    <url-pattern>/SOAPMonitor</url-pattern>
+  </servlet-mapping>
+
  <!-- uncomment this if you want the admin servlet -->
  <!--
   <servlet-mapping>
@@ -45,7 +63,22 @@
     <url-pattern>/servlet/AdminServlet</url-pattern>
   </servlet-mapping>
  -->
-  <welcome-file-list id="WelcomeFileList_1">
+
+    <!-- currently the W3C havent settled on a media type for WSDL;
+    http://www.w3.org/TR/2003/WD-wsdl12-20030303/#ietf-draft
+    for now we go with the basic 'it's XML' response -->
+  <mime-mapping>
+    <extension>wsdl</extension>
+     <mime-type>text/xml</mime-type>
+  </mime-mapping>
+  
+
+  <mime-mapping>
+    <extension>xsd</extension>
+    <mime-type>text/xml</mime-type>
+  </mime-mapping>
+
+  <welcome-file-list id="WelcomeFileList">
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.jsp</welcome-file>
     <welcome-file>index.jws</welcome-file>
