--- a/ant/src/main/org/apache/tools/ant/types/defaults.properties
+++ b/ant/src/main/org/apache/tools/ant/types/defaults.properties
@@ -16,3 +16,6 @@ extensionSet=org.apache.tools.ant.taskdefs.optional.extension.ExtensionSet
 extension=org.apache.tools.ant.taskdefs.optional.extension.ExtensionAdapter
 libfileset=org.apache.tools.ant.taskdefs.optional.extension.LibFileSet
 selector=org.apache.tools.ant.types.selectors.SelectSelector
+
+# Starlink types
+extclasspath=uk.ac.starlink.ant.types.ExtClasspath
