--- a/astrogrid/build.xml
+++ b/astrogrid/build.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
 
 <!--
- !   {Package} build file
+ !   AstroGrid build file
  !
- !   This file describes how to build and install {Package} from
- !   source and binary releases. {Package} is a class library
+ !   This file describes how to build and install AstroGrid from
+ !   source and binary releases. AstroGrid is a class library
  !   (i.e. provides an API and related documentation).
  !
  !   The main targets are:
@@ -31,7 +31,7 @@
  !
  !-->
 
-<project name="Build file for {Package}" default="build" basedir=".">
+<project name="Build file for AstroGrid" default="build" basedir=".">
 
   <!-- If either or both of these files exist then any properties
    !   contained within them will override those defined here.  -->
@@ -77,12 +77,12 @@
    !-->
 
   <!-- Define the package name and current versions -->
-  <property name="Name" value="{PACKAGE}"/>
-  <property name="name" value="{package}"/>
-  <property name="version" value="1.0"/>
+  <property name="Name" value="AstroGrid"/>
+  <property name="name" value="astrogrid"/>
+  <property name="version" value="0.1"/>
 
   <!-- The Java package name -->
-  <property name="package.name" value="{package.path}"/>
+  <property name="package.name" value="uk.ac.starlink.astrogrid"/>
 
   <!-- Compilation options -->
   <property name="debug" value="true"/>
@@ -195,11 +195,12 @@
    !-->
   <extclasspath id="installed.classpath">
 
-    <!-- {Other packages} -->
-    <pathelement location="${star.jar.dir}/{package1}/{package1.jar}"/>
-    <pathelement location="${star.jar.dir}/{package2}/{package2.jar}"/>
+    <!-- AstroGrid CDK -->
+    <pathelement location="${star.jar.dir}/astrogrid/astrogrid.jar"/>
 
-    <!-- {More packages} -->
+    <!-- Table -->
+    <pathelement location="${star.jar.dir}/table/table.jar"/>
+
   </extclasspath>
 
   <!-- Generate the local build classpath. This is the most difficult
@@ -221,11 +222,10 @@
   <extclasspath id="built.jarpath">
 
     <pathelement 
-       location="${star.build.dir}/{package1}/lib/{package1}/{package1.jar}"/>
+       location="${star.build.dir}/astrogrid/lib/astrogrid/astrogrid.jar"/>
     <pathelement 
-       location="${star.build.dir}/{package2}/lib/{package2}/{package2.jar}"/>
+       location="${star.build.dir}/table/lib/table/table.jar"/>
 
-    <!-- {More packages} -->
   </extclasspath>
 
   <!-- "Local" third party jars. Normally these will be kept in their
@@ -235,9 +235,11 @@
    !   entered into the main jar file manifest.
    !-->
   <path id="package.jars">
+ <!--
      <fileset dir="${src.jars.dir}">
         <include name="*.jar"/>
      </fileset>
+  -->
   </path>
 
   <path id="built.classpath">
@@ -316,21 +318,17 @@
   <target name="check_packages"
           unless="runonly.install">
 
-    <!--  {Example package1} -->
-    <available property="{package1}.present"
+    <!-- AstroGrid -->
+    <available property="astrogrid.present"
                classpathref="classpath"
-               classname="uk.ac.starlink.{package1}.{MainClass}"/>
+               classname="org.astrogrid.store.tree.TreeClient"/>
+    <fail message="No AstroGrid available" unless="astrogrid.present"/>
 
-    <fail message="No {package1} available" unless="{package1}.present"/>
-
-    <!--  {Example package2} -->
-    <available property="{package2}.present"
+    <!-- Table -->
+    <available property="table.present"
                classpathref="classpath"
-               classname="uk.ac.starlink.{package1}.{MainClass}"/>
-
-    <fail message="No {package2} available" unless="{package2}.present"/>
-
-    <!-- {More critical dependencies} -->
+               classname="uk.ac.starlink.table.StarTable"/>
+    <fail message="No Table available" unless="table.present"/>
 
     <!-- Need JUnit for testcases, not essential -->
     <available property="junit.present"
@@ -392,8 +390,6 @@
 
       <!-- Exclude any files in the source tree that should not be
        !   compiled -->
-      <exclude name="**/{Retired1.java}"/>
-      <exclude name="**/{Retired2.java}"/>
       <exclude name="**/*.html"/>
       <exclude name="**/*.properties*"/>
     </javac>
@@ -402,8 +398,7 @@
      !   (i.e. are discovered using "getResource()"). -->
     <copy todir="${build.classes}">
       <fileset dir="${java.dir}">
-        <include name="**/{package.support.files}"/>
-        <include name="**/{more.package.support.files}"/>
+        <!-- <include name="**/{package.support.files}"/> -->
       </fileset>
     </copy>
 
@@ -411,10 +406,12 @@
      !   distribution directories to save on unnecessary copies and to
      !   make these available for resolution by other locally built
      !   packages that are using this one -->
+<!--
     <mkdir dir="${dist.lib.pkg}"/>
     <copy todir="${dist.lib.pkg}">
        <fileset dir="${src.jars.dir}"/>
     </copy>
+ -->
 
   </target>
 
@@ -467,11 +464,11 @@
           codebase="${webstart.codebase}">
 
       <information>
-         <title>{Package} - {description}</title>
+         <title>ASTROGRID - Starlink classes for use with AstroGrid</title>
          <vendor>Starlink UK</vendor>
          <homepage href="${home.page}"/>
          <icon href="${webstart.starlink_logo}"/>
-         <description>"Starlink {Package} - Webstart edition"</description>
+         <description>"Starlink ASTROGRID - Webstart edition"</description>
          <offline_allowed/>
        </information>
 
@@ -486,8 +483,8 @@
          <jar href="${name}/${name}.jar"/>
 
          <!-- Name any extension packages we directly depend on -->
-         <extension name="{EXT1}" href="{ext1}.jnlp"/>
-         <extension name="{EXT2}" href="{ext2}.jnlp"/>
+         <extension name="AstroGrid CDK" href="astrogrid.jnlp"/>
+         <extension name="TABLE" href="table.jnlp"/>
        </resources>
 
        <!-- This is a component -->
@@ -525,15 +522,19 @@
     <mkdir dir="${dist.etc.pkg}"/>
 
     <!-- Copy any configuration/helper scripts etc. -->
+ <!--
     <copy todir="${dist.bin.pkg}">
       <fileset dir="${script.dir}/" />
     </copy>
+  -->
 
     <!-- Copy extra documentation, note doesn't include javadocs these
      !   are generated from the source-->
+ <!--
     <copy todir="${dist.docs.pkg}">
       <fileset dir="${src.docs}"/>
     </copy>
+  -->
 
     <!-- Set permissions on contents of distribution directories -->
     <chmod perm="ugo+rx" dir="${dist.dir}" type="dir" includes="**"
@@ -734,43 +735,41 @@
     <property name="star.docs.pkg" value="${star.docs}/${name}"/>
     <property name="star.lib.arch" value="${star.lib}/${os.arch}"/>
     <mkdir dir="${star.install}"/>
-    <mkdir dir="${star.bin.pkg}"/>
+    <!-- <mkdir dir="${star.bin.pkg}"/> -->
     <mkdir dir="${star.lib.pkg}"/>
-    <mkdir dir="${star.etc.pkg}"/>
+    <!-- <mkdir dir="${star.etc.pkg}"/> -->
     <mkdir dir="${star.docs.pkg}"/>
 
     <!-- Note: if you uncomment any of the following (reasonable since
      !   the class library may not have any scripts), then make sure
      !   that the first loggedcopy has logfileAppend="false" so that
      !   the copy logfile is initialised -->
-    <loggedcopy todir="${star.bin}"
-                logfile="${install.log}"
-                overwrite="${install.overwrite}"
-                logfileAppend="false">
-      <fileset dir="${dist.bin}"/>
-    </loggedcopy>
-
-    <chmod perm="ugo+rx" failonerror="${chmod.fail}">
-      <fileset dir="${star.bin}">
-        <present targetdir="${dist.bin}" present="both"/>
-      </fileset>
-    </chmod>
-
     <loggedcopy todir="${star.lib}"
                 logfile="${install.log}"
                 overwrite="${install.overwrite}"
-                logfileAppend="true">
+                logfileAppend="false">
       <fileset dir="${dist.lib}">
         <include name="**/*.jnlp"/>
         <include name="**/*.jar"/>
         <include name="**/*.zip"/>
       </fileset>
     </loggedcopy>
-
-    <!-- Also remove the package-specific directory.
-     !   Note exact format is required.-->
     <echo file="${install.log}" append="true">${star.lib.pkg}
 </echo>
+
+<!--
+    <loggedcopy todir="${star.bin}"
+                logfile="${install.log}"
+                overwrite="${install.overwrite}"
+                logfileAppend="false">
+      <fileset dir="${dist.bin}"/>
+    </loggedcopy>
+    <chmod perm="ugo+rx" failonerror="${chmod.fail}">
+      <fileset dir="${star.bin}">
+        <present targetdir="${dist.bin}" present="both"/>
+      </fileset>
+    </chmod>
+ -->
 
     <loggedcopy todir="${star.docs}"
                 logfile="${install.log}"
@@ -779,15 +778,12 @@
       <fileset dir="${dist.docs}" excludes="${unfiltered.files}"/>
       <filterchain refid="filters"/>
     </loggedcopy>
-
     <loggedcopy todir="${star.docs}" filtering="false"
                 logfile="${install.log}"
                 overwrite="${install.overwrite}"
                 logfileAppend="true">
       <fileset dir="${dist.docs}" includes="${unfiltered.files}"/>
     </loggedcopy>
-
-    <!-- Also remove the package-specific directory-->
     <echo file="${install.log}" append="true">${star.docs.pkg}
 </echo>
 
@@ -804,16 +800,16 @@
   <target name="install-runonly"
           description="-> install a runonly distribution into Starlink tree">
 
-     <!-- Make sure that the expected file structure exists, some
-          of these files can be missing if originally empty -->
-     <mkdir dir="${dist.dir}"/>
-     <mkdir dir="${dist.bin.pkg}"/>
-     <mkdir dir="${dist.lib.pkg}"/>
-     <mkdir dir="${dist.docs.pkg}"/>
-     <mkdir dir="${dist.etc.pkg}"/>
+    <!-- Make sure that the expected file structure exists, some
+         of these files can be missing if originally empty -->
+    <mkdir dir="${dist.dir}"/>
+    <!-- <mkdir dir="${dist.bin.pkg}"/> -->
+    <mkdir dir="${dist.lib.pkg}"/>
+    <mkdir dir="${dist.docs.pkg}"/>
+    <!-- <mkdir dir="${dist.etc.pkg}"/> -->
 
-     <!-- Do normal install, but with many targets switched off-->
-     <antcall target="install">
+    <!-- Do normal install, but with many targets switched off-->
+    <antcall target="install">
       <param name="runonly.install" value="true"/>
       <param name="javadoc.notrequired" value="true"/>
     </antcall>
@@ -954,6 +950,7 @@
 
     <mkdir dir="${build.tests}"/>
 
+ <!--
     <javac srcdir="${tests.dir}"
            destdir="${build.tests}"
            debug="${debug}"
@@ -961,8 +958,8 @@
            deprecation="${deprecation}" >
 
       <classpath refid="tests-classpath"/>
-
     </javac>
+  -->
 
   </target>
 
@@ -979,6 +976,7 @@
           depends="compile-tests"
           if="junit.present">
 
+ <!--
     <junit printsummary="${junit.summary}" haltonfailure="yes"
            filtertrace="${junit.filtertrace}"
            fork="${junit.fork}">
@@ -1002,6 +1000,7 @@
       </batchtest>
 
     </junit>
+ -->
 
   </target>
 
