Added entries for new AGLIB and AstroGrid packages

--- a/build.xml
+++ b/build.xml
@@ -128,6 +128,9 @@
     <echo message="Executing Jetty target: ${what}"/>
     <ant dir="./jetty" target="${what}"/>
 
+    <echo message="Executing AGLIB target: ${what}"/>
+    <ant dir="./aglib" target="${what}"/>
+
     <echo message="Executing UTIL target: ${what}"/>
     <ant dir="./util" target="${what}"/>
 
@@ -169,6 +172,9 @@
 
     <echo message="Executing FITS target: ${what}"/>
     <ant dir="./fits" target="${what}"/>
+
+    <echo message="Executing AstroGrid target: ${what}"/>
+    <ant dir="./astrogrid" target="${what}"/>
 
     <echo message="Executing JSky target: ${what}"/>
     <ant dir="./jsky" target="${what}"/>
