--- a/table/.properties
+++ b/table/.properties
@@ -1,2 +1,2 @@
 jar.class.path=../util/util.jar ../votable/votable.jar ../fits/fits.jar \
-../mirage/mirage.jar htmIndex.jar
+../mirage/mirage.jar ../astrogrid/astrogrid.jar htmIndex.jar
